# chrompainting

./: .gitignore  environment.sh  jupyter.pid  main.py  pyproject.toml  run_jupyter.sh  run_pipeline.ipynb  visualize_gnomix_results.ipynb
logs/: jupyter.stderr
output/normalized_primary_only/: query_results.fb  query_results.msp
output/snps_only/: query_results.fb  query_results.msp
