[project]
name = "chrompainting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bash-kernel>=0.10.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib",
    "numpy",
    "pandas",
    "PyYAML",
    "scikit-allel",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sklearn-crfsuite",
    "tagore>=1.1.2",
    "tqdm",
    "uncertainty-calibration",
    "xgboost",
]
